--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cypress:run": "cypress run"
   },
   "devDependencies": {
+    "@applitools/eyes-cypress": "^3.25.3",
     "cypress": "^7.0.1",
     "cypress-cucumber-preprocessor": "^4.0.3",
     "cypress-xpath": "^1.6.2"
