--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "scripts": {
+    "cypress:open": "cypress open",
     "cypress:open": "CYPRESS_TAGS='' cypress open",
-    "npm run cypress:run ": "cypress run"
+    "cypress:run": "cypress run"
   },
   "devDependencies": {
     "@applitools/eyes-cypress": "3.26.3",
-    "cypress": "^9.0.1",
+    "cypress": "^7.0.1",
     "cypress-cucumber-preprocessor": "^4.0.3",
     "cypress-xpath": "^1.6.2"
   }
